Opened 14 years ago
Closed 10 years ago
#6805 closed bug (fixed)
[Locale] crashes after pressing Default button
Reported by: | diver | Owned by: | zooey |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Preferences/Locale | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
This is hrev39371 in VirtualBox.
- Start Locale and set Formatting to German.
- Restart Locale.
- Press Deafult.
Thread 479 caused an exception: Segment violation [...] [Switching to team /boot/system/preferences/Locale (475) thread w>Региональные на (479)] 0x0020b5e7 in LocaleWindow::MessageReceived () (gdb) bt #0 0x0020b5e7 in LocaleWindow::MessageReceived () #1 0x002c7378 in BLooper::DispatchMessage () from /boot/system/lib/libbe.so #2 0x00389e68 in BWindow::DispatchMessage () from /boot/system/lib/libbe.so #3 0x0038576d in BWindow::task_looper () from /boot/system/lib/libbe.so #4 0x002c8bda in BLooper::_task0_ () from /boot/system/lib/libbe.so #5 0x005b491c in thread_entry () from /boot/system/lib/libroot.so #6 0x78033fec in ?? () (gdb)
Change History (5)
comment:1 by , 14 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
comment:2 by , 14 years ago
Status: | assigned → in-progress |
---|
comment:3 by , 14 years ago
comment:4 by , 14 years ago
Wouldn't it make more sense if the BOutlineListView is fixed instead? Should even be less work, and the BColumnListView is not only considered experimental, but due to its bad API, it will be removed in the long run, so the time to do the conversion is not really well spent.
comment:5 by , 10 years ago
Resolution: | → fixed |
---|---|
Status: | in-progress → closed |
Fixed in hrev48411. There isn't a bug with BOutlineListView, only a bad API. You must use list->Expand rather than item->SetExpanded directly to expand an item, otherwise things get out of sync.
Note:
See TracTickets
for help on using tickets.
Fixed in hrev39382, thanks for reporting.
Unfortunately, this doesn't mean that the Locale preflet is always working as expected, it still awaits a switch from BOutlineListView to BColumnListView. If you repeat the procedure described above now, the preflet won't crash, but the default language won't be selected, as apparently it seems to have been lost in the outline listview.
Leaving this open until I find the time to replace the outline listview.