Fix crash reported in #6805: * check if we actually have a selected item

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@39382 a95241bf-73f2-0310-859d-f6bbb57e9c96